--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>城之內克也的決鬥網頁<title>
+    <title>城之內克也的決鬥網頁</title>
     <link rel="stylesheet" href="final.css">
   </head>
   <body>
