--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <center>
-      <img src="https://truth.bahamut.com.tw/s01/201608/871184c63aaefa0780b4964387ff6ea4.JPG">
+      <img src="https://truth.bahamut.com.tw/s01/201608/871184c63aaefa0780b4964387ff6ea4.JPG" width="200px" height="200px">
     </center>
   </body>
 </html>
