--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 		</table>
 		<p>這邊是我讓你們用來測試運氣的神奇按鈕</p>
 		<button id="but" type="button" onclick="rand()">骰子運氣遊戲</button>
+		<br>
 		<script>
 			function rand() {
 				var n = Math.floor(Math.random()*6)+1;
@@ -67,7 +68,6 @@
 			};
 		</script>
 		<?php
-			echo "<p>我可不是靠賽打牌的喔!!</p>"
-		?>
+			echo <p>我可不是靠賽打牌的喔!!</p>
   </body>
 </html>
